--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
-[![Docker](https://github.com/appgate/sdp-operator/actions/workflows/docker.yml/badge.svg)](https://github.com/appgate/sdp-operator/actions/workflows/docker.yml)
 
+[[Docker][https://github.com/appgate/sdp-operator/actions/workflows/docker.yml/badge.svg?branch=master&event=push]]
 * appgate-operator
 
 ** Description
